# runtime

./: .gitignore  Makefile  README.md  horizon-runtime.cabal  todo.md
doc/: architecture  design
doc/runtime/: dependency-loader
framework/: LICENSE  nessy-framework.cabal
framework/src/lib/Language/: CSS.hs  HTML.hs  JavaScript.hs  PolyDSL.hs
framework/src/lib/Language/CSS/: DOM.hs
framework/src/lib/Language/CSS/DOM/: Declaration.hs  Definition.hs  Expression.hs
framework/src/lib/Language/CSS/DOM/Declaration/: Selector.hs
framework/src/lib/Language/HTML/: DOM.hs
framework/src/lib/Language/HTML/DOM/: Attribute.hs
framework/src/lib/Language/JavaScript/: Conversion.hs  DOM.hs  DSL.hs  Generator.hs  Transformation.hs
framework/src/lib/Language/JavaScript/Conversion/: DOMRead.hs  DOMWrite.hs
framework/src/lib/Language/JavaScript/DOM/: Expression.hs
framework/src/lib/Language/JavaScript/DOM/Conversion/: Read.hs  Write.hs
framework/src/lib/Language/JavaScript/DOM/Expression/: BinaryOperator.hs  UnaryOperator.hs
framework/src/lib/Language/JavaScript/DSL/: Expressions.hs  Instances.hs  Operators.hs  Script.hs  Statements.hs  TypeAliases.hs
framework/src/lib/Language/JavaScript/DSL/Operators/: Bitwise.hs  Comparison.hs  Logical.hs  Members.hs  Numeric.hs  Others.hs
framework/src/lib/Language/JavaScript/Transformation/: Source.hs
framework/src/lib/Language/PolyDSL/: DOM.hs  DSL.hs  Lib.hs  Transformation.hs
framework/src/lib/Language/PolyDSL/DOM/: Declaration.hs  Expression.hs  Module.hs
framework/src/lib/Language/PolyDSL/DOM/Declaration/: Type.hs  TypeSignature.hs
framework/src/lib/Language/PolyDSL/DSL/: Declarations.hs  Expressions.hs  Modules.hs  TypeAliases.hs
framework/src/lib/Language/PolyDSL/Lib/: ModuleDataBool.hs  ModuleDataMaybe.hs
framework/src/lib/Language/PolyDSL/Transformation/: JavaScript.hs  Source.hs
framework/src/lib/Language/PolyDSL/Transformation/JavaScript/: Expressions.hs  GADTs.hs  Internal.hs  MainModule.hs  Modules.hs
framework/src/lib/Language/Transformation/: Protocol.hs  Semantics.hs
framework/src/lib/Language/Transformation/Protocol/: Transformator.hs  Transformer.hs
framework/src/lib/Language/Transformation/Semantics/: Class.hs  CompilationUnit.hs  CompilationUnitResolution.hs  CompilationUnitResolver.hs  FullyQualifiedName.hs  Instances.hs  Scope.hs  SemanticResult.hs
framework/src/lib/Text/: Generation.hs
framework/src/lib/Text/CSS/: DOM.hs
framework/src/lib/Text/CSS/DOM/: Declaration.hs  Definition.hs  Expression.hs
framework/src/lib/Text/CSS/DOM/Declaration/: Selector.hs
framework/src/lib/Text/Generation/: Generator.hs
framework/src/lib/Text/HTML/: DOM.hs
framework/src/lib/Text/HTML/DOM/: Attribute.hs
framework/src/lib/Text/JavaScript/: DOM.hs
framework/src/lib/Text/JavaScript/DOM/: Expression.hs  Statement.hs
framework/src/lib/Text/JavaScript/DOM/Expression/: BinaryOperator.hs  UnaryOperator.hs
runtime/: nessy-runtime.cabal
runtime/src/lib/Language/PolyDSL/: Lib.hs
runtime/src/runtime/: Main.hs
src/runtime/: Main.hs
