name:                   nessy-framework
version:                0.1.0.0
synopsis:               The framework behind the nessy language.
description:            The nessy-framework library implements functionality
                        required by the nessy DSL and other tools.
license:                MIT
license-file:           LICENSE
author:                 Nils 'bash0r' Jonsson
maintainer:             aka.bash0r@gmail.com
copyright:              (c) 2015 Nils 'bash0r' Jonsson
-- category:            
build-type:             Simple
extra-source-files:     LICENSE
                  ,     README.md
                  ,     changelog.md
cabal-version:          >=1.10

library
  exposed-modules:      Language.JavaScript
                 ,      Language.Transformation.Protocol
  other-modules:        Language.CSS
               ,        Language.CSS.DOM
               ,        Language.CSS.DOM.Declaration
               ,        Language.CSS.DOM.Declaration.Selector
               ,        Language.CSS.DOM.Definition
               ,        Language.CSS.DOM.Expression

               ,        Language.HTML
               ,        Language.HTML.DOM
               ,        Language.HTML.DOM.Attribute

               ,        Language.JavaScript.Conversion
               ,        Language.JavaScript.Conversion.DOMRead
               ,        Language.JavaScript.Conversion.DOMWrite
               ,        Language.JavaScript.DOM
               ,        Language.JavaScript.DOM.Expression
               ,        Language.JavaScript.DOM.Expression.BinaryOperator
               ,        Language.JavaScript.DOM.Expression.UnaryOperator
               ,        Language.JavaScript.DSL
               ,        Language.JavaScript.DSL.Expressions
               ,        Language.JavaScript.DSL.Instances
               ,        Language.JavaScript.DSL.Operators
               ,        Language.JavaScript.DSL.Script
               ,        Language.JavaScript.DSL.Statements
               ,        Language.JavaScript.DSL.TypeAliases
               ,        Language.JavaScript.Transformation
               ,        Language.JavaScript.Transformation.Source

               ,        Language.PolyDSL
               ,        Language.PolyDSL.DOM
               ,        Language.PolyDSL.DOM.Declaration
               ,        Language.PolyDSL.DOM.Declaration.Type
               ,        Language.PolyDSL.DOM.Expression
               ,        Language.PolyDSL.Transformation.JavaScript

               ,        Language.Transformation.Protocol.Transformer
  build-depends:        base >=4.8 && <4.9
  hs-source-dirs:       src/lib
  default-language:     Haskell2010

