name:                   nessy-framework
version:                0.1.0.0
synopsis:               The framework behind the nessy language.
description:            The nessy-framework library implements functionality
                        required by the nessy DSL and other tools.
license:                MIT
license-file:           LICENSE
author:                 Nils 'bash0r' Jonsson
maintainer:             aka.bash0r@gmail.com
copyright:              (c) 2015 Nils 'bash0r' Jonsson
-- category:            
build-type:             Simple
extra-source-files:     LICENSE
                  ,     README.md
                  ,     changelog.md
cabal-version:          >=1.10

library
  exposed-modules:      Language.JavaScript
                 ,      Language.PolyDSL
                 ,      Language.Transformation.Protocol
  other-modules:        Language.JavaScript.DOM
               ,        Language.JavaScript.DOM.Expression
               ,        Language.JavaScript.DOM.Expression.BinaryOperator
               ,        Language.JavaScript.DOM.Expression.UnaryOperator
               ,        Language.JavaScript.DSL
               ,        Language.JavaScript.DSL.Expressions
               ,        Language.JavaScript.DSL.Instances
               ,        Language.JavaScript.DSL.Operators
               ,        Language.JavaScript.DSL.Operators.Bitwise
               ,        Language.JavaScript.DSL.Operators.Comparison
               ,        Language.JavaScript.DSL.Operators.Logical
               ,        Language.JavaScript.DSL.Operators.Numeric
               ,        Language.JavaScript.DSL.Operators.Others
               ,        Language.JavaScript.DSL.Script
               ,        Language.JavaScript.DSL.Statements
               ,        Language.JavaScript.DSL.TypeAliases
               ,        Language.JavaScript.Transformation
               ,        Language.JavaScript.Transformation.Source

               ,        Language.PolyDSL.DOM
               ,        Language.PolyDSL.DOM.Declaration
               ,        Language.PolyDSL.DOM.Declaration.Type
               ,        Language.PolyDSL.DOM.Declaration.TypeSignature
               ,        Language.PolyDSL.DOM.Expression
               ,        Language.PolyDSL.DOM.Module
               ,        Language.PolyDSL.DSL
               ,        Language.PolyDSL.DSL.Declarations
               ,        Language.PolyDSL.DSL.Expressions
               ,        Language.PolyDSL.DSL.Modules
               ,        Language.PolyDSL.DSL.TypeAliases
               ,        Language.PolyDSL.Transformation
               ,        Language.PolyDSL.Transformation.JavaScript
               ,        Language.PolyDSL.Transformation.JavaScript.Expressions
               ,        Language.PolyDSL.Transformation.Source

               ,        Language.Transformation.Protocol.Transformer

               ,        Language.Transformation.Semantics
               ,        Language.Transformation.Semantics.Class
               ,        Language.Transformation.Semantics.FullyQualifiedName
               ,        Language.Transformation.Semantics.Scope
               ,        Language.Transformation.Semantics.SemanticResult
  build-depends:        base ==4.8.*
  hs-source-dirs:       src/lib
  default-language:     Haskell2010

